--- a/src/components/LightDarkMode/index.css
+++ b/src/components/LightDarkMode/index.css
@@ -1,4 +1,3 @@
-/* Write your CSS here */
 .container {
   background-color: #ffffff;
   display: flex;
@@ -7,9 +6,8 @@
   align-items: center;
   height: 100vh;
 }
-.Dark {
+.changeContainer {
   border-radius: 10px;
-  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,17 +16,12 @@
   padding-top: 25px;
   padding-bottom: 25px;
 }
+.Dark {
+  background-color: #000000;
+}
 .Light {
-  border-radius: 10px;
   background-color: #ffffff;
   border: 2px solid #000000;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 25px;
-  padding-bottom: 25px;
 }
 
 .DarkHeading {
